Add Java backend integration and update API routes
- Introduced a Java backend with RESTful API for authentication, project, and task management.
- Updated Next.js API routes to proxy requests to the Java backend, handling authentication and data mapping.
- Added CORS configuration to allow requests from specified origins.
- Implemented Flyway for database migrations in the Java backend.
- Created a stats endpoint to retrieve user-specific project and task statistics.
- Added necessary dependencies and configuration files for the Java backend setup.